# Corty

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: corty.rs  error.rs  lib.rs  protocol.rs
crates/core/src/agent/: mod.rs
crates/core/src/agent/tools/: mod.rs
crates/core/src/storage/: mod.rs
crates/core/src/storage/vector/: db.rs  mod.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  lib.rs  slash_command.rs  tui.rs
crates/tui/src/utils/: mod.rs  mouse_capture.rs  scroll_event_helper.rs
crates/tui/src/widgets/: chat.rs  chat_history.rs  colors.rs  command_popup.rs  constants.rs  mod.rs  text_block.rs  toaster.rs  welcome.rs
crates/tui/tests/: ai_working.rs  slash_commands.rs  toaster.rs
