[package]
name = "corty-tui"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
color-eyre = { workspace = true }
ratatui = { version = "0.29.0", features = [
    "unstable-widget-ref",
    "unstable-rendered-line-info",
] }
corty-core = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tui-textarea = "0.7.0"
tui-input = { version = "0.12.1" }
tui-markdown = "0.3.5"
